--- a/VeterinariaProyecto/nbproject/project.properties
+++ b/VeterinariaProyecto/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.25.jar=C:\\Conector Java Mysql\\mysql-connector-java-8.0.25.jar
+file.reference.mysql-connector-java-8.0.25.jar-1=C:\\Users\\Usuario\\Downloads\\mysql-connector-java-8.0.25.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.25.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
