--- a/VeterinariaGrupo5/nbproject/private/private.properties
+++ b/VeterinariaGrupo5/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-compile.on.save=true
+compile.on.save=false
 do.depend=false
 do.jar=true
-file.reference.jcalendar-1.4.jar=C:\\Users\\Riquelme\\Desktop\\Lab1-Com1-2022\\Teoria\\Acceso a Datos\\Drivers-Java\\jcalendar-1.4.jar
+do.jlink=false
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Riquelme\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+jlink.strip=false
+user.properties.file=C:\\Users\\danib\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
