--- a/VeterinariaGrupo5/nbproject/project.properties
+++ b/VeterinariaGrupo5/nbproject/project.properties
@@ -34,13 +34,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\danib\\Downloads\\Herramientas de desarrollador\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\Riquelme\\Desktop\\Lab1-Com1-2022\\Teoria\\Acceso a Datos\\Drivers-Java\\mysql-connector-java-8.0.25.jar
+file.reference.mysql-connector-java-8.0.25.jar=C:\\Conector Java Mysql\\mysql-connector-java-8.0.25.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.25.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-8.0.25.jar}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
